--- a/templates/visiteur/index.html.twig
+++ b/templates/visiteur/index.html.twig
@@ -23,7 +23,7 @@
     <button type="button" class="btn btn-outline-info" data-bs-toggle="modal" data-bs-target="#consulter">
         Consulter une Fiche de Frais
     </button>
-    <button type="button" class="btn btn-outline-info" onclick="location.href='visiteur/renseigner'">
+    <button type="button" class="btn btn-outline-info" onclick="location.href='visiteur/renseignerFicheFrais'">
         Renseigner une Fiche de Frais
     </button>
     </div>
