Corrections Doctrine + Ajout logo

--- a/templates/comptable/index.html.twig
+++ b/templates/comptable/index.html.twig
@@ -8,8 +8,7 @@
             <div class="col-12 col-sm-3 col-xl-2 px-sm-2 px-0 bg-dark d-flex sticky-top">
                 <div class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start px-3 pt-2 text-white">
                 <span class="d-flex align-items-center pb-sm-3 mb-md-0 me-md-auto text-white text-decoration-none">
-                <img src="../images/logogsb.jpg" alt="L'image ne charge pas" width="35" height="35" class="rounded-circle">
-                    <span class="fs-5"> Galaxy Swiss Bourdin</span>
+                <img src="../images/logogsb.png" alt="L'image ne charge pas" width="70" height="35" class="elipse">
                 </span>
                     <ul class="nav nav-pills flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center align-items-sm-start" id="menu">
                         <li class="nav-item" checked>
