--- a/templates/comptable/index.html.twig
+++ b/templates/comptable/index.html.twig
@@ -42,6 +42,9 @@
                     <div class="col pt-4">
                         <h3>Espace Comptable</h3>
                     </div>
+                    <div>
+                        <p>Bienvenue sur l'espace de gestion des fiches de frais {{app.session.get('prenom')}} {{app.session.get('nom')}}</p>
+                    </div>
                 </main>
                 <footer class="row bg-light py-4 mt-auto">
                     <div class="col"> © 2021 GSB Frais </div>
