--- a/templates/visiteur/index.html.twig
+++ b/templates/visiteur/index.html.twig
@@ -14,6 +14,7 @@
     </span>
     <span class="navbar-text">
       <h5>{{app.session.get('prenom')}} {{app.session.get('nom')}}</h5>
+      <a href='/deconnecter'>deconnexion</a>
     </span>
   </div>
 </nav>
